# innersight-ueba

./: .gitignore
.github/workflows/: ci.yml  security.yml
apps/api/: Dockerfile
apps/api/innersight_api/: config.py  deps.py  main.py
apps/api/innersight_api/auth/: __init__.py
apps/api/innersight_api/routers/: suspects.py  users.py
apps/worker/: pyproject.toml
apps/worker/innersight_worker/: __init__.py  cli.py
apps/worker/innersight_worker/graphs/: builder.py  org_graph.py
apps/worker/innersight_worker/ingestion/: canonical.py
apps/worker/innersight_worker/models/: isolation_forest.py  node2vec.py
backend/: .env.example  README.md  __init__.py
backend/apps/api/: Dockerfile  pyproject.toml
backend/apps/worker/: Dockerfile  pyproject.toml
backend/docs/: eval-report.md  model-card.md
backend/docs/adr/: 0001-frontend-never-talks-to-db.md  0003-event-schema.md
backend/docs/data/: cert-r42.md
backend/infra/compose/: docker-compose.dev.yml  docker-compose.test.yml
backend/infra/postgres/: init.sql
backend/infra/qdrant/: collections.yml
backend/ml/configs/: graphsage_v1.yaml  isolation_forest_v1.yaml  node2vec_v1.yaml  rgcn_v1.yaml
backend/ml/notebooks/: 01_eda.ipynb
backend/scripts/: download_cert.sh
backend/src/: vector_db.py
backend/src/gnn/: __init__.py  embedder.py  explainer.py  model.py  trainer.py
backend/src/graph/: __init__.py  builder.py  features.py
backend/src/ingestion/: __init__.py  aggregator.py  constants.py  parser.py
docs/: report.md
docs/adr/: 0002-stack-choices.md
scripts/: bootstrap.sh  seed_db.py
(+25 files in other folders)
